<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.sunasterisk.demomvvm.ui.detail.BookDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageBackDetailBook"
            android:layout_width="@dimen/dp_25"
            android:layout_height="0dp"
            android:layout_marginVertical="@dimen/dp_15"
            android:layout_marginStart="@dimen/dp_15"
            android:src="@drawable/ic_back"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageFavoriteDetailBook"
            android:layout_width="@dimen/dp_25"
            android:layout_height="0dp"
            android:layout_marginVertical="@dimen/dp_12"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="@dimen/dp_25"
            android:onClick="@{() -> viewModel.setFavorite()}"
            android:src="@{viewModel.isFavorite != false ? @drawable/ic_favorite: @drawable/ic_un_favorite}"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/dp_20"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageBackDetailBook">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageDetailBook"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@color/color_gallery"
                    android:loadImage="@{viewModel.book.image}"
                    android:src="@drawable/book"
                    app:layout_constraintDimensionRatio="6:7"
                    app:layout_constraintEnd_toStartOf="@+id/textTitleDetailBook"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.35" />

                <TextView
                    android:id="@+id/textTitleDetailBook"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_10"
                    android:text="@{viewModel.book.title}"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/sp_20"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageDetailBook"
                    app:layout_constraintTop_toTopOf="parent"
                    tool:text="@tools:sample/lorem" />

                <TextView
                    android:id="@+id/textAuthorDetailBook"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_10"
                    android:text="@{viewModel.book.authors}"
                    android:textColor="@color/color_azure_blue_ribbon"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageDetailBook"
                    app:layout_constraintTop_toBottomOf="@+id/textTitleDetailBook"
                    tool:text="@tools:sample/lorem" />

                <TextView
                    android:id="@+id/textTitleInfoDetailBook"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/title_description_book"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/sp_20"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/imageDetailBook" />

                <View
                    android:id="@+id/line"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_1"
                    android:layout_marginVertical="@dimen/dp_3"
                    android:background="@color/color_mine_shaft"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textTitleInfoDetailBook" />

                <TextView
                    android:id="@+id/textTitlePublisherDetailBook"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_3"
                    android:text="@string/text_publisher_book"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textTitleInfoDetailBook"
                    app:layout_constraintWidth_percent="0.3" />

                <TextView
                    android:id="@+id/textPublisherDetailBook"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_3"
                    android:text="@{viewModel.book.publisher}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/textTitlePublisherDetailBook"
                    app:layout_constraintTop_toBottomOf="@id/textTitleInfoDetailBook" />

                <TextView
                    android:id="@+id/textTitleLanguageDetailBook"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_3"
                    android:text="@string/text_language_book"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textTitlePublisherDetailBook"
                    app:layout_constraintWidth_percent="0.3" />

                <TextView
                    android:id="@+id/textLanguageDetailBook"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_3"
                    android:text="@{viewModel.book.language}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/textTitleLanguageDetailBook"
                    app:layout_constraintTop_toBottomOf="@id/textPublisherDetailBook" />

                <TextView
                    android:id="@+id/textTitlePagesDetailBook"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_3"
                    android:text="@string/text_pages_book"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textTitleLanguageDetailBook"
                    app:layout_constraintWidth_percent="0.3" />

                <TextView
                    android:id="@+id/textPagesDetailBook"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_3"
                    android:text="@{Integer.toString(viewModel.book.pages)}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/textTitlePagesDetailBook"
                    app:layout_constraintTop_toBottomOf="@id/textLanguageDetailBook" />

                <TextView
                    android:id="@+id/textTitleYearDetailBook"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_3"
                    android:text="@string/text_year_book"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textTitlePagesDetailBook"
                    app:layout_constraintWidth_percent="0.3" />

                <TextView
                    android:id="@+id/textYearDetailBook"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_3"
                    android:text="@{Integer.toString(viewModel.book.year)}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/textTitleYearDetailBook"
                    app:layout_constraintTop_toBottomOf="@id/textPagesDetailBook" />

                <TextView
                    android:id="@+id/textTitleIsbn10DetailBook"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_3"
                    android:text="@string/text_isbn10_book"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textTitleYearDetailBook"
                    app:layout_constraintWidth_percent="0.3" />

                <TextView
                    android:id="@+id/textIsbn10DetailBook"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_3"
                    android:text="@{viewModel.book.isbn10}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/textTitleIsbn10DetailBook"
                    app:layout_constraintTop_toBottomOf="@id/textYearDetailBook" />

                <TextView
                    android:id="@+id/textTitleIsbn13DetailBook"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_3"
                    android:text="@string/text_isbn13_book"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textTitleIsbn10DetailBook"
                    app:layout_constraintWidth_percent="0.3" />

                <TextView
                    android:id="@+id/textIsbn13DetailBook"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_3"
                    android:text="@{viewModel.book.isbn13}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/textTitleIsbn13DetailBook"
                    app:layout_constraintTop_toBottomOf="@id/textIsbn10DetailBook" />

                <TextView
                    android:id="@+id/textTitleDescDetailBook"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:text="@string/title_description_book"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/sp_20"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textTitleIsbn13DetailBook" />

                <View
                    android:id="@+id/line2"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_1"
                    android:layout_marginVertical="@dimen/dp_3"
                    android:background="@color/color_mine_shaft"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textTitleDescDetailBook" />

                <TextView
                    android:id="@+id/textDescDetailBook"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_3"
                    android:text="@{viewModel.book.desc}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/line2"
                    tool:text="@tools:sample/lorem" />

                <TextView
                    android:id="@+id/textTitleLinkDetailBook"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:text="@string/title_link_book"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/sp_20"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textDescDetailBook" />

                <View
                    android:id="@+id/line3"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_1"
                    android:layout_marginVertical="@dimen/dp_3"
                    android:background="@color/color_mine_shaft"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textTitleLinkDetailBook" />

                <TextView
                    android:id="@+id/textLinkDetailBook"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_3"
                    android:text="@{viewModel.book.url}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/line3" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
